--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,45 @@
 .App {
   text-align: center;
 }
+.con{
+  background-color: beige;
+  width: 80%;
+  margin: 0 auto;
+  padding-bottom: 30px;
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.person{
+  width: 80%;
+  margin: 0px auto 0px auto;
+  ;
 }
+.person-img{
+  width: 200px;
+  border-radius: 20px;
+  
+}
+.details{
+  width: 40%;
+  margin: 0 auto;
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+}
+.details p{
   display: flex;
-  flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin:10px auto;
 }
-
-.App-link {
-  color: #61dafb;
+.details p img{
+padding-right: 25px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+button{
+  padding: 10px;
+  background-color: blanchedalmond;
+  margin-top: 20px;
+  border-radius: 10px;
+}
+button:hover{
+  background-color: black;
+  color: antiquewhite;
+  transition: 1s;
 }
